--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -30,7 +30,7 @@
     <parent>
         <groupId>com.evolveum.midpoint</groupId>
         <artifactId>midpoint</artifactId>
-        <version>2.1.1p2-SNAPSHOT</version>
+        <version>2.1.2</version>
     </parent>
     <pluginRepositories>
         <pluginRepository>
