--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -25,11 +25,11 @@
     <groupId>com.evolveum.midpoint.gui</groupId>
     <artifactId>admin-gui</artifactId>
     <packaging>war</packaging>
-    <version>2.1.1p2-SNAPSHOT</version>
+    <version>2.1.2</version>
     <parent>
         <artifactId>gui</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.1.1p2-SNAPSHOT</version>
+        <version>2.1.2</version>
     </parent>
     <build>
         <finalName>midpoint</finalName>
@@ -105,17 +105,17 @@
         <dependency>
             <groupId>com.evolveum.midpoint.gui</groupId>
             <artifactId>admin-gui-en-US</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
         </dependency>
 	    <dependency>
             <groupId>com.evolveum.midpoint.gui</groupId>
             <artifactId>admin-gui-sk-SK</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.gui</groupId>
             <artifactId>gui-components</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
         </dependency>
 
         <!-- JDBC DRIVERS -->
@@ -132,64 +132,64 @@
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>repo-api</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.model</groupId>
             <artifactId>model-api</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.model</groupId>
             <artifactId>workflow</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.model</groupId>
             <artifactId>notifications</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
         </dependency>
         <!-- MIDPOINT RUNTIME DEPENDENCIES -->
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>repo-sql-impl</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>repo-cache</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>task-quartz-impl</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>audit-impl</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.model</groupId>
             <artifactId>model-impl</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.provisioning</groupId>
             <artifactId>provisioning-impl</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>system-init</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
             <scope>runtime</scope>
         </dependency>
 
@@ -249,7 +249,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>repo-test-util</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -266,7 +266,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.tools</groupId>
             <artifactId>test-ng</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
             <scope>test</scope>
         </dependency>
 
