--- a/icf-connectors/dummy-connector/pom.xml
+++ b/icf-connectors/dummy-connector/pom.xml
@@ -25,12 +25,12 @@
 	<name>Dummy Connector</name>
 	<groupId>com.evolveum.icf</groupId>
 	<artifactId>dummy-connector</artifactId>
-	<version>2.1.1p2-SNAPSHOT</version>
+	<version>2.1.2</version>
 	<packaging>jar</packaging>
 	<parent>
 		<artifactId>icf-connectors</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.1.1p2-SNAPSHOT</version>
+		<version>2.1.2</version>
 	</parent>
 	<dependencies>
 		<dependency>
@@ -44,7 +44,7 @@
 		<dependency>
 			<groupId>com.evolveum.icf</groupId>
 			<artifactId>dummy-resource</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
