--- a/model/pom.xml
+++ b/model/pom.xml
@@ -28,7 +28,7 @@
 	<parent>
 		<artifactId>parent</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.1.1p2-SNAPSHOT</version>
+		<version>2.1.2</version>
 		<relativePath>../build-system/pom.xml</relativePath>
 	</parent>
 	<organization>
