--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	<name>midPoint Project</name>
 	<groupId>com.evolveum.midpoint</groupId>
 	<artifactId>midpoint</artifactId>
-	<version>2.1.1p2-SNAPSHOT</version>
+	<version>2.1.2</version>
 	<packaging>pom</packaging>
 	<description>Utility module to compile all of the maven based midPoint projects.</description>
 	<organization>
