--- a/repo/audit-impl/pom.xml
+++ b/repo/audit-impl/pom.xml
@@ -29,23 +29,23 @@
 	<parent>
 		<artifactId>repo</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.1.1p2-SNAPSHOT</version>
+		<version>2.1.2</version>
 	</parent>
 	<dependencies>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-api</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-cache</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>audit-api</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-pool</groupId>
@@ -60,7 +60,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.tools</groupId>
 			<artifactId>test-ng</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -76,13 +76,13 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-sql-impl</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-test-util</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -93,7 +93,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>system-init</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 			<scope>test</scope>
 		</dependency>
 		<!--<dependency>-->
