--- a/repo/repo-sql-impl-test/pom.xml
+++ b/repo/repo-sql-impl-test/pom.xml
@@ -30,18 +30,18 @@
     <parent>
         <artifactId>repo</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.1.1p2-SNAPSHOT</version>
+        <version>2.1.2</version>
     </parent>
     <dependencies>
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>repo-sql-impl</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>system-init</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
@@ -68,7 +68,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
             <artifactId>test-util</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
