--- a/repo/task-quartz-impl/pom.xml
+++ b/repo/task-quartz-impl/pom.xml
@@ -29,23 +29,23 @@
 	<parent>
 		<artifactId>repo</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.1.1p2-SNAPSHOT</version>
+		<version>2.1.2</version>
 	</parent>
 	<dependencies>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-api</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-cache</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>task-api</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
         <dependency>
 			<groupId>commons-pool</groupId>
@@ -59,7 +59,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>repo-sql-impl</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
             <scope>provided</scope>
         </dependency>
         <!--  Testing dependecies  -->
@@ -71,7 +71,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.tools</groupId>
 			<artifactId>test-ng</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -87,7 +87,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.repo</groupId>
             <artifactId>audit-impl</artifactId>
-            <version>2.1.1p2-SNAPSHOT</version>
+            <version>2.1.2</version>
             <scope>test</scope>
         </dependency>
 		
@@ -123,7 +123,7 @@
         <dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-test-util</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -134,7 +134,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>system-init</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
