--- a/samples/model-client-sample/pom.xml
+++ b/samples/model-client-sample/pom.xml
@@ -89,7 +89,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.model</groupId>
 			<artifactId>model-client</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
             <groupId>org.apache.cxf</groupId>
