--- a/testing/sanity/pom.xml
+++ b/testing/sanity/pom.xml
@@ -28,7 +28,7 @@
 	<parent>
 		<artifactId>parent</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.1.1p2-SNAPSHOT</version>
+		<version>2.1.2</version>
 		<relativePath>../../build-system/pom.xml</relativePath>
 	</parent>
 	<organization>
@@ -61,47 +61,47 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.infra</groupId>
 			<artifactId>util</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.infra</groupId>
 			<artifactId>common</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-api</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.model</groupId>
 			<artifactId>model-impl</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.model</groupId>
 			<artifactId>model-test</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.provisioning</groupId>
 			<artifactId>provisioning-impl</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>task-quartz-impl</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>audit-impl</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-test-util</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 		</dependency>
 
 		<!-- TEST dependency -->
@@ -113,7 +113,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.tools</groupId>
 			<artifactId>test-ng</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -129,13 +129,13 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.infra</groupId>
 			<artifactId>test-util</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-sql-impl</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -146,7 +146,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>system-init</artifactId>
-			<version>2.1.1p2-SNAPSHOT</version>
+			<version>2.1.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
