--- a/tools/test-ng/pom.xml
+++ b/tools/test-ng/pom.xml
@@ -29,7 +29,7 @@
 	<parent>
 		<artifactId>tools</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.1.1p2-SNAPSHOT</version>
+		<version>2.1.2</version>
 	</parent>
 	<dependencies>
 		<dependency>
