--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -177,7 +177,7 @@
         </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.model</groupId>
-            <artifactId>workflow</artifactId>
+            <artifactId>workflow-api</artifactId>
             <version>2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -213,6 +213,12 @@
         <dependency>
             <groupId>com.evolveum.midpoint.model</groupId>
             <artifactId>model-impl</artifactId>
+            <version>2.2-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.evolveum.midpoint.model</groupId>
+            <artifactId>workflow-impl</artifactId>
             <version>2.2-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
