Workflows, changes in 'workflow' module.

--- a/model/workflow/pom.xml
+++ b/model/workflow/pom.xml
@@ -22,9 +22,9 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <name>midPoint Workflow</name>
+    <name>midPoint Workflow - impl</name>
     <groupId>com.evolveum.midpoint.model</groupId>
-    <artifactId>workflow</artifactId>
+    <artifactId>workflow-impl</artifactId>
     <packaging>jar</packaging>
     <parent>
         <artifactId>model</artifactId>
@@ -39,6 +39,11 @@
 	</repository>
     </repositories> 
     <dependencies>
+        <dependency>
+            <groupId>com.evolveum.midpoint.model</groupId>
+            <artifactId>workflow-api</artifactId>
+            <version>2.2-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.model</groupId>
             <artifactId>model-api</artifactId>
