--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageAdminUsers_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageAdminUsers_en_US.utf8.properties
@@ -1,4 +1,5 @@
-#Thu Oct 04 12:31:34 CEST 2012
+#Thu Apr 11 19:11:15 CEST 2013
+pageAdminUsers.bulkActions=Bulk actions
 pageAdminUsers.editUser=Edit user
 pageAdminUsers.listUsers=List users
 pageAdminUsers.newUser=New user
