--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUsers_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUsers_en_US.utf8.properties
@@ -1,5 +1,6 @@
-#Sat Mar 16 14:26:19 CET 2013
+#Thu Apr 11 19:11:15 CEST 2013
 page.title=Users in repository
+pageUsers.accounts=Accounts
 pageUsers.button.clearButton=Clear
 pageUsers.button.delete=Delete
 pageUsers.button.disable=Disable
