--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/security/MidPointApplication_en_US.utf8.properties
@@ -1,4 +1,4 @@
-#Sat Mar 16 14:26:19 CET 2013
+#Thu Apr 11 19:11:15 CEST 2013
 ActivationType.enabled=Enabled
 ActivationType.title=Activation
 ActivationType.validFrom=Valid from
@@ -42,6 +42,7 @@ OriginType.OUTBOUND=Outbound
 OriginType.RECONCILIATION=Reconciliation
 OriginType.SYNC_ACTION=Sync action
 OriginType.USER_ACTION=User action
+OriginType.USER_POLICY=User policy
 OriginType.null=-
 ResourceStatus.DOWN=Down
 ResourceStatus.ERROR=Error
