--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUsers_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUsers_sk_SK.utf8.properties
@@ -1,5 +1,6 @@
-#Sat Mar 16 14:26:07 CET 2013
+#Thu Apr 11 19:11:09 CEST 2013
 page.title=Používatelia v databáze
+pageUsers.accounts=Accounts
 pageUsers.button.clearButton=Vymazať
 pageUsers.button.delete=Vymazať
 pageUsers.button.disable=Zakázať
