--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -59,6 +59,7 @@ OriginType.ASSIGNMENTS=Assignments
 OriginType.ACTIVATIONS=Activations
 OriginType.CREDENTIALS=Credentials
 OriginType.USER_ACTION=User action
+OriginType.USER_POLICY=User policy
 OriginType.null=-
 
 OperationResultStatus.UNKNOWN=Unknown
