--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageAdminUsers_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageAdminUsers_sk_SK.utf8.properties
@@ -1,4 +1,5 @@
-#Thu Oct 04 12:42:36 CEST 2012
+#Thu Apr 11 19:11:09 CEST 2013
+pageAdminUsers.bulkActions=Bulk actions
 pageAdminUsers.editUser=Editovať používateľa
 pageAdminUsers.listUsers=Zoznam používateľov
 pageAdminUsers.newUser=Nový používateľ
