small improvement for MID-1251

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -206,7 +206,8 @@ operation.com.evolveum.midpoint.provisioning.api.ProvisioningService.discoverCon
 operation.com.evolveum.midpoint.provisioning.api.ProvisioningService.getObject=Get object (Provisioning)
 operation.com.evolveum.midpoint.provisioning.api.ProvisioningService.modifyObject=Modify object (Provisioning)
 operation.com.evolveum.midpoint.provisioning.api.ProvisioningService.searchObjects=Search objects (Provisioning)
-operation.com.evolveum.midpoint.provisioning.api.ProvisioningService.testResource=Test resource
+operation.com.evolveum.midpoint.provisioning.api.ProvisioningService.testResource=Test resource (Provisioning)
+operation.com.evolveum.midpoint.provisioning.impl.ResourceManager.completeResource=Complete resource (Provisioning)
 operation.com.evolveum.midpoint.provisioning.api.ResourceObjectChangeListener.checkSituation=Check synchronization situation
 operation.com.evolveum.midpoint.provisioning.api.ResourceObjectChangeListener.notifyChange=Notify change
 operation.com.evolveum.midpoint.provisioning.impl.ShadowConverter.addShadow=Add shadow (Provisioning)
@@ -384,6 +385,10 @@ operation.com.evolveum.midpoint.web.component.assignment.AssignmentEditorPanel.l
 operation.com.evolveum.midpoint.common.policy.PasswordPolicyUtils.passwordValidation=Password validation against password policy
 operation.com.evolveum.midpoint.model.lens.ChangeExecutor.linkAccount=Link account (Model)
 operation.com.evolveum.midpoint.model.lens.ChangeExecutor.unlinkAccount=Unlink account (Model)
+operation.com.evolveum.midpoint.model.lens.ChangeExecutor.updateSituationInAccount=Update situation in account (Model)
+operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute=Execute (Model)
+operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute.focus.UserType=Execute user delta (Model)
+operation.com.evolveum.midpoint.model.lens.ChangeExecutor.execute.projection.ShadowType=Execute shadow delta (Model)
 
 operation.com.evolveum.midpoint.model.api.ModelDiagnosticService.repositorySelfTest=Repository self test (Model)
 operation.com.evolveum.midpoint.model.controller.ModelDiagController.repositorySelfTest.user.getObject=Get object (Model)
