Refactored WorkflowServiceImpl and some other things in workflow module. Removed workflow forms from common schema. Various changes in wf gui.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wf/processes/itemApproval/ItemApprovalPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wf/processes/itemApproval/ItemApprovalPanel.properties
@@ -23,6 +23,10 @@ ItemApprovalPanel.assigned=Assigned to
 ItemApprovalPanel.created=Created
 
 ItemApprovalPanel.itemToBeApproved=Item to be approved
+ItemApprovalPanel.itemThatWasApproved=Item that was considered (and was APPROVED)
+ItemApprovalPanel.itemThatWasRejected=Item that was considered (and was REJECTED)
+
 ItemApprovalPanel.approvalSchema=Approval schema
-ItemApprovalPanel.decisionsDone=Decisions done so far
+ItemApprovalPanel.decisionsDoneWhenFinishedIs_false=Decisions done so far
+ItemApprovalPanel.decisionsDoneWhenFinishedIs_true=Decisions done
 ItemApprovalPanel.currentWorkItems=Current work items
