--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/PageProcessInstances.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/PageProcessInstances.properties
@@ -25,6 +25,7 @@ PageProcessInstancesRequestedFor.title=Process instances corresponding to reques
 pageProcessInstances.active=Currently active
 pageProcessInstances.finished=Recently finished
 pageProcessInstances.item.name=Name
+pageProcessInstances.item.result=Result
 pageProcessInstances.item.started=Started
 pageProcessInstances.item.finished=Finished
 pageProcessInstances.before=before
