assignments now uses required fields, displays hasOutbound and required asterisk (*)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/ACAttributePanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/assignment/ACAttributePanel.properties
@@ -19,3 +19,5 @@
 # Portions Copyrighted 2012 [name of copyright owner]
 #
 ACAttributePanel.button.showExprEditor=Show expression
+ACAttributePanel.required=Required
+ACAttributePanel.hasOutbound=Has outbound
