fix for schema exception in gui forms MID-1241

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -398,3 +398,5 @@ operation.com.evolveum.midpoint.model.controller.ModelDiagController.repositoryS
 
 operation.com.evolveum.midpoint.web.page.admin.help.PageSystem.testRepository=Test repository (Gui)
 operation.com.evolveum.midpoint.web.page.admin.help.PageSystem.getRepoDiag=Get repository diagnostics (Gui)
+operation.com.evolveum.midpoint.web.component.prism.ObjectWrapper.createContainers=Create containers (Gui)
+operation.com.evolveum.midpoint.web.component.prism.ContainerWrapper.createProperties=Create properties (Gui)
