removing tristate checkbox MID-1290

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -51,6 +51,10 @@ SynchronizationPolicyDecision.DELETE=Delete
 SynchronizationPolicyDecision.KEEP=No change
 SynchronizationPolicyDecision.UNLINK=Unlink
 
+Boolean.NULL=Undefined
+Boolean.TRUE=True
+Boolean.FALSE=False
+
 OriginType.SYNC_ACTION=Sync action
 OriginType.RECONCILIATION=Reconciliation
 OriginType.INBOUND=Inbound
