accounts sync details listing, not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/internal/PageAccounts.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/internal/PageAccounts.properties
@@ -20,3 +20,8 @@
 #
 
 page.title=Internals :: accounts
+PageAccounts.accounts.oid=Oid
+PageAccounts.accounts.name=Name
+PageAccounts.accounts.synchronizationSituation=Situation
+PageAccounts.accounts.synchronizationTimestamp=Timestamp
+PageAccounts.accounts.description=Description
