minor task list css update.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTasks.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTasks.properties
@@ -36,8 +36,8 @@ pageTasks.node.statusMessage=Status message
 pageTasks.node.managementPort=Management port
 #pageTasks.node.nodeIdentifier=Identifier
 pageTasks.nodes=Nodes
-pageTasks.state=State:
-pageTasks.category=Category:
+pageTasks.state=State
+pageTasks.category=Category
 pageTasks.button.deleteNode=Delete
 pageTasks.button.stopSchedulerAndTasks=Stop scheduler + tasks
 pageTasks.button.startScheduler=Start
