Major enhancement of workflows gui. More details on task information page (showing model context and workflow data).

--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit_sk_SK.utf8.properties
@@ -34,6 +34,6 @@ pageTaskEdit.suspendReq=Skôr ako je možné editovať úlohu, je potrebné ju p
 pageTaskEdit.threadStop=Thread stop action
 pageTaskEdit.tightlyBound=Tightly bound
 pageTaskEdit.title.edit=Details for '{0}'
-pageTaskEdit.uri=Handler URI
+pageTaskEdit.handlerUri=Handler URI
 runUntilNodeDown.error1=Compatible data for 'Thread stop action' are\: Close, Suspend
 runUntilNodeDown.error2=Compatible data for 'Thread stop action' are\: Restart, Reschedule
