--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageProcessInstance_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/workflow/PageProcessInstance_sk_SK.utf8.properties
@@ -3,6 +3,7 @@ page.title=Process instance details
 pageProcessInstance.button.back=Back
 pageProcessInstance.details=Other information\:
 pageProcessInstance.finished=Finished\:
+pageProcessInstance.task=Midpoint task\:
 pageProcessInstance.message.cantGetDetails=Couldn't get process instance details.
 pageProcessInstance.message.noTasks=none
 pageProcessInstance.name=Process instance name\:
