--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/ExecuteChangeOptionsPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/ExecuteChangeOptionsPanel.properties
@@ -21,3 +21,4 @@
 
 ExecuteChangeOptionsPanel.label.force=Force
 ExecuteChangeOptionsPanel.label.reconcile=Reconcile
+ExecuteChangeOptionsPanel.label.executeAfterAllApprovals=Execute after all approvals
