--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/model/operationStatus/ModelOperationStatusPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/model/operationStatus/ModelOperationStatusPanel.properties
@@ -18,5 +18,11 @@
 #
 # Portions Copyrighted 2013 [name of copyright owner]
 #
-MyWorkItemsPanel.name=Name
-MyWorkItemsPanel.created=Created
+
+ModelOperationStatusPanel.label.state=State:
+ModelOperationStatusPanel.label.focusType=of type:
+ModelOperationStatusPanel.label.focusName=Object:
+ModelOperationStatusPanel.label.primaryDelta=Primary delta:
+ModelOperationStatusPanel.state.PRIMARY=Primary: operation is being approved
+ModelOperationStatusPanel.state.SECONDARY=Secondary: resource operation(s) are being approved
+ModelOperationStatusPanel.state.FINAL=Final: operation has been executed (successfully or not)
