--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
@@ -66,3 +66,12 @@ pageTask.cronHelp=Cron-like specification is in the form: SECONDS MINUTES HOURS 
   www.quartz-scheduler.org/documentation/quartz-2.1.x/tutorials/tutorial-lesson-06.
 
 pageTasks.runsContinually=runs continually
+
+pageTasks.category.AllCategories=All categories
+pageTasks.category.Demo=Demo
+pageTasks.category.ImportFromFile=Import from file
+pageTasks.category.ImportingAccounts=Importing accounts
+pageTasks.category.LiveSynchronization=Live synchronization
+pageTasks.category.Reconciliation=Reconciliation
+pageTasks.category.UserRecomputation=User recomputation
+pageTasks.category.Workflow=Workflow
