--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit.properties
@@ -25,9 +25,11 @@ pageTaskEdit.button.save=Save
 pageTaskEdit.button.edit=Edit
 
 pageTaskEdit.name=Task name
-pageTaskEdit.oid=Oid
+pageTaskEdit.oid=OID
+pageTaskEdit.identifier=Identifier
 pageTaskEdit.category=Category
-pageTaskEdit.uri=Handler URI
+pageTaskEdit.parent=Parent task
+pageTaskEdit.handlerUri=Handler URI
 pageTaskEdit.execution=Execution status
 pageTaskEdit.suspendReq=For editing is necessary to suspend the task
 
@@ -48,6 +50,10 @@ pageTaskEdit.runUntilNodeDown=Run only until node down
 pageTaskEdit.threadStop=Thread stop action
 
 pageTaskEdit.opResult=Operation result
+
+pageTaskEdit.modelOperationStatusLabel=Model operation status
+pageTaskEdit.subtasksLabel=Subtasks
+pageTaskEdit.workflowInformationLabel=Workflow information
 
 pageTaskEdit.scheduleHelp=For one-time tasks, enter neither schedule interval nor cron-like specification. \
   For recurring tasks, enter exactly one of these.
