--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTasks.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/server/PageTasks.properties
@@ -27,6 +27,7 @@ pageTasks.task.executingAt=Executing at
 pageTasks.task.currentRunTime=Current run time
 pageTasks.task.scheduledToRunAgain=Scheduled to start again
 pageTasks.task.status=Status
+pageTasks.task.detail=Detail
 pageTasks.node.name=Name
 #pageTasks.node.running=Running
 pageTasks.node.executionStatus=Status
@@ -38,6 +39,7 @@ pageTasks.node.managementPort=Management port
 pageTasks.nodes=Nodes
 pageTasks.state=State
 pageTasks.category=Category
+pageTasks.subtasks=Show subtasks:
 pageTasks.button.deleteNode=Delete
 pageTasks.button.stopSchedulerAndTasks=Stop scheduler + tasks
 pageTasks.button.startScheduler=Start
@@ -70,12 +72,3 @@ pageTasks.message.noNodeSelected=No node has been selected.
 pageTasks.message.alreadySuspended=Task '{0}' is already suspended or closed.
 pageTasks.message.alreadyResumed=Task '{0}' can't be resumed, it's already running or closed.
 #pageTasks.category
-
-pageTasks.category.AllCategories=All categories
-pageTasks.category.Demo=Demo
-pageTasks.category.ImportFromFile=Import from file
-pageTasks.category.ImportingAccounts=Importing accounts
-pageTasks.category.LiveSynchronization=Live synchronization
-pageTasks.category.Reconciliation=Reconciliation
-pageTasks.category.UserRecomputation=User recomputation
-pageTasks.category.Workflow=Workflow
