--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/workflow/PageWorkItem.properties
@@ -22,19 +22,25 @@
 page.title=Work Item details
 pageWorkItem.description=Work Item
 pageWorkItem.requester.description=Requester
+pageWorkItem.accordionLabel.requester=Requester (detailed)
 pageWorkItem.objectOld.description=Object before change
+pageWorkItem.accordionLabel.objectOld=Object before change (detailed)
 pageWorkItem.objectNew.description=Object after proposed change
-pageWorkItem.additionalData.description=Role to be added
+pageWorkItem.accordionLabel.objectNew=Object after proposed change (detailed)
+pageWorkItem.additionalData.description=Related data
+pageWorkItem.accordionLabel.additionalData=Related data (detailed)
+pageWorkItem.accordionLabel.processInstance=Process instance information
+
 pageWorkItem.trackingData.description=Tracking (diagnostic) data
 pageWorkItem.requestCommon.description=General information about the request
 pageWorkItem.requestSpecific.description=Your decision
+pageWorkItem.delta=Delta to be approved
 pageWorkItem.button.approve=Approve
 pageWorkItem.button.reject=Reject
-#pageWorkItem.button.done=Save
 pageWorkItem.button.cancel=Back
 
 pageWorkItem.mainInfo=Basic information
-pageWorkItem.additionalInfo=Supplementary information (do not edit, please)
+pageWorkItem.additionalInfo=Supplementary information
 
 pageWorkItem.title=Work to do:
 pageWorkItem.requestedBy=Requested by:
