--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -92,6 +92,7 @@ TaskDtoExecutionStatus.RUNNABLE=Runnable
 TaskDtoExecutionStatus.WAITING=Waiting
 TaskDtoExecutionStatus.SUSPENDED=Suspended
 TaskDtoExecutionStatus.CLOSED=Closed
+TaskDtoExecutionStatus.CLOSED.withTimestamp=Closed at ${}
 
 TaskDtoExecutionStatusFilter.ALL=All execution states
 TaskDtoExecutionStatusFilter.RUNNING_OR_RUNNABLE=Runnable or running
