--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/server/PageTaskEdit_en_US.utf8.properties
@@ -34,6 +34,6 @@ pageTaskEdit.suspendReq=For editing is necessary to suspend the task
 pageTaskEdit.threadStop=Thread stop action
 pageTaskEdit.tightlyBound=Tightly bound
 pageTaskEdit.title.edit=Details for '{0}'
-pageTaskEdit.uri=Handler URI
+pageTaskEdit.handlerUri=Handler URI
 runUntilNodeDown.error1=Compatible data for 'Thread stop action' are\: Close, Suspend
 runUntilNodeDown.error2=Compatible data for 'Thread stop action' are\: Restart, Reschedule
