--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
@@ -25,3 +25,7 @@ pageBase.unknownBuildNumber=unknown
 #most common used button names, used also in PageBase subclasses
 PageBase.button.save=Save
 PageBase.button.back=Back
+
+WorkItemsPanel.name=Name
+WorkItemsPanel.assigned=Assigned to
+WorkItemsPanel.created=Created
