Showing user-related workflow tasks on PageUser (along with setting objectRef for those tasks). Made Back button in task and workflow pages working. Better names for root workflow tasks. Using TextArea for requester and approver comments in WorkItem.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
@@ -23,6 +23,7 @@ page.title=User details
 pageUser.title.editing={0} details
 pageUser.accounts=Accounts [{0}]
 pageUser.assignments=Assignments [{0}]
+pageUser.tasks=Tasks [{0}]
 pageUser.orgUnits=Organization units [{0}]
 pageUser.button.save=Save
 pageUser.button.back=Back
@@ -45,6 +46,11 @@ pageUser.button.label.add=Add
 pageUser.button.label.role=Role
 pageUser.button.label.resources=Resource
 pageUser.button.label.assign=Assign
+
+pageUser.task.name=Task name
+pageUser.task.category=Category
+pageUser.task.execution=Execution state
+pageUser.task.status=Status
 
 pageUser.message.cantCreateUser=Create user failed
 pageUser.message.cantUpdateUser=Update user failed
