--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -89,6 +89,7 @@ TaskExecutionStatus.CLOSED=Closed
 
 TaskDtoExecutionStatus.RUNNING=Running
 TaskDtoExecutionStatus.RUNNABLE=Runnable
+TaskDtoExecutionStatus.RUNNING_OR_RUNNABLE=Running/Runnable
 TaskDtoExecutionStatus.WAITING=Waiting
 TaskDtoExecutionStatus.SUSPENDED=Suspended
 TaskDtoExecutionStatus.CLOSED=Closed
