protected accounts support MID-1120

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -33,10 +33,8 @@ schema.objectTypes.connector=Connector
 schema.objectTypes.connectorHost=Connector host
 schema.objectTypes.genericObject=Generic object
 schema.objectTypes.object=Object
-schema.objectTypes.resourceObject=Resource object
 schema.objectTypes.resource=Resource
 schema.objectTypes.node=Node
-schema.objectTypes.resourceState=Resource state
 schema.objectTypes.valuePolicy=Value policy
 schema.objectTypes.abstractRole=Abstract role
 schema.objectTypes.role=Role
@@ -45,6 +43,7 @@ schema.objectTypes.task=Task
 schema.objectTypes.userTemplate=User template
 schema.objectTypes.user=User
 schema.objectTypes.org=Organization
+schema.objectTypes.shadow=Shadow
 
 SynchronizationPolicyDecision.ADD=Add
 SynchronizationPolicyDecision.DELETE=Delete
