resources sub pages cleanup, wizard disabled.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResource.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResource.properties
@@ -37,7 +37,7 @@ pageResource.conInitialization=Connection initialization
 pageResource.conConnection=Connector connection
 pageResource.conSanity=Connector sanity
 pageResource.conSchema=Connector schema
-pageResource.seeDebug=See debug pages
+pageResource.editResource=Edit resource
 
 pageResource.capabilities=Capabilities
 
