--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResourceEdit.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResourceEdit.properties
@@ -21,3 +21,5 @@
 
 page.title=New resource
 page.title.editResource=Edit resource
+pageResourceEdit.edit=Edit
+pageResourceEdit.message.emptyXml=Can't save empty xml as resource.
