--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResourceWizard.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResourceWizard.properties
@@ -19,6 +19,5 @@
 # Portions Copyrighted 2012 [name of copyright owner]
 #
 
-page.title={0}
-pageContentEntitlements.entitlements=Entitlements
-pageContentEntitlements.message.resourceOidNotDefined=Resource oid is not defined in url.
+page.title=New resource
+page.title.editResource=Edit resource
