--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts.properties
@@ -33,3 +33,4 @@ pageContentAccounts.message.cantShowAccountDetails=Can't show details for accoun
 pageContentAccounts.message.noAccountSelected=No accounts has been selected.
 pageContentAccounts.button.changeOwner=Change owner
 pageContentAccounts.button.removeOwner=Remove owner
+pageContentAccounts.message.resourceOidNotDefined=Resource oid is not defined in url.
