minor bugfixes for top level resources menu.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -405,3 +405,4 @@ operation.com.evolveum.midpoint.web.page.admin.help.PageSystem.testRepository=Te
 operation.com.evolveum.midpoint.web.page.admin.help.PageSystem.getRepoDiag=Get repository diagnostics (Gui)
 operation.com.evolveum.midpoint.web.component.prism.ObjectWrapper.createContainers=Create containers (Gui)
 operation.com.evolveum.midpoint.web.component.prism.ContainerWrapper.createProperties=Create properties (Gui)
+operation.com.evolveum.midpoint.web.page.admin.resources.PageResourceEdit.saveResource=Save resource (Gui)
