simple export accounts. MID-796

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/internal/PageAccounts.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/internal/PageAccounts.properties
@@ -25,3 +25,4 @@ PageAccounts.accounts.name=Name
 PageAccounts.accounts.synchronizationSituation=Situation
 PageAccounts.accounts.synchronizationTimestamp=Timestamp
 PageAccounts.accounts.description=Description
+PageAccounts.exportException=Error occurred during export, reason {0}
